Fixed a test that failed after refactor